--- a/app/src/main/res/layout/cakesetpagebody.xml
+++ b/app/src/main/res/layout/cakesetpagebody.xml
@@ -13,108 +13,259 @@
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginBottom="50dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-                <ImageView
-                    android:layout_width="200dp"
-                    android:layout_height="200dp"
-                    android:src="@drawable/cake"
-                    android:layout_marginTop="20dp"
-                    android:layout_gravity="center"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="스트로베리초콜릿생크림"
-                    android:textSize="20sp"
-                    android:textColor="@color/black"
-                    android:fontFamily="@font/body"
-                    android:layout_marginTop="10dp"
-                    android:layout_gravity="center"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="6,300원"
-                    android:textSize="20sp"
-                    android:textColor="@color/black"
-                    android:fontFamily="@font/body"
-                    android:layout_marginTop="10dp"
-                    android:layout_gravity="center"/>
-                <androidx.constraintlayout.widget.ConstraintLayout
+
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp">
+                    android:orientation="vertical">
 
-                    <Button
-                        android:id="@+id/minusBtn"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/minus"
-                        android:scaleType="fitCenter"
-                        app:layout_constraintEnd_toStartOf="@+id/cakeCount"
-                        app:layout_constraintTop_toTopOf="parent" />
-
+                    <ImageView
+                        android:layout_width="200dp"
+                        android:layout_height="200dp"
+                        android:src="@drawable/cake"
+                        android:layout_marginTop="20dp"
+                        android:layout_gravity="center"/>
                     <TextView
-                        android:id="@+id/cakeCount"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/beveragecount"
-                        android:gravity="center"
-                        android:textColor="@color/black"
-                        android:textSize="30sp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <Button
-                        android:id="@+id/plusBtn"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:background="@drawable/plus"
-                        android:scaleType="fitCenter"
-                        app:layout_constraintStart_toEndOf="@+id/cakeCount"
-                        app:layout_constraintTop_toTopOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView10"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="10dp"
-                        android:fontFamily="@font/head"
-                        android:text="커스텀 추가"
-                        android:textColor="@color/black"
+                        android:layout_height="wrap_content"
+                        android:text="케이크"
                         android:textSize="20sp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-                    <Button
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/mainbtn"
-                        android:text="선택"
-                        android:fontFamily="@font/body"
                         android:textColor="@color/black"
-                        android:layout_marginRight="10dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                        android:fontFamily="@font/body"
+                        android:layout_marginTop="10dp"
+                        android:layout_gravity="center"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="6,300원"
+                        android:textSize="20sp"
+                        android:textColor="@color/black"
+                        android:fontFamily="@font/body"
+                        android:layout_marginTop="10dp"
+                        android:layout_gravity="center"/>
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp">
 
+                        <ImageButton
+                            android:id="@+id/imageButton5"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:background="@null"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/minus"
+                            app:layout_constraintEnd_toStartOf="@+id/textView9"
+                            app:layout_constraintTop_toTopOf="parent" />
 
+                        <TextView
+                            android:id="@+id/textView9"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:background="@drawable/beveragecount"
+                            android:gravity="center"
+                            android:text="1"
+                            android:textColor="@color/black"
+                            android:textSize="30sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <ImageButton
+                            android:id="@+id/imageButton6"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:background="@null"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/plus"
+                            app:layout_constraintStart_toEndOf="@+id/textView9"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="온도"
+                        android:textColor="@color/black"
+                        android:fontFamily="@font/head"
+                        android:textSize="20sp"
+                        android:layout_marginLeft="10dp"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="2">
+                        <Button
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:text="ICE"
+                            android:fontFamily="@font/body"
+                            android:layout_weight="1"
+                            android:background="@drawable/mainbtn"/>
+
+                        <Button
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="10dp"
+                            android:text="HOT"
+                            android:fontFamily="@font/body"
+                            android:layout_weight="1"
+                            android:background="@drawable/mainbtn"/>
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="사이즈"
+                        android:textColor="@color/black"
+                        android:fontFamily="@font/head"
+                        android:textSize="20sp"
+                        android:layout_marginLeft="10dp"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="3">
+
+                        <Button
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="10dp"
+                            android:text="레귤러"
+                            android:fontFamily="@font/body"
+                            android:layout_weight="1"
+                            android:background="@drawable/mainbtn"/>
+
+                        <Button
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="라지"
+                            android:fontFamily="@font/body"
+                            android:layout_weight="1"
+                            android:background="@drawable/mainbtn"/>
+
+                        <Button
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="10dp"
+                            android:text="맥스"
+                            android:fontFamily="@font/body"
+                            android:layout_weight="1"
+                            android:background="@drawable/mainbtn"/>
+                    </LinearLayout>
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="컵"
+                        android:textColor="@color/black"
+                        android:fontFamily="@font/head"
+                        android:textSize="20sp"
+                        android:layout_marginLeft="10dp"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:weightSum="2">
+                        <Button
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="포장"
+                            android:fontFamily="@font/body"
+                            android:layout_weight="1"
+                            android:background="@drawable/mainbtn"/>
+
+                        <Button
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="10dp"
+                            android:text="매장"
+                            android:fontFamily="@font/body"
+                            android:layout_weight="1"
+                            android:background="@drawable/mainbtn"/>
+                    </LinearLayout>
+
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView10"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="10dp"
+                            android:fontFamily="@font/head"
+                            android:text="커스텀 추가"
+                            android:textColor="@color/black"
+                            android:textSize="20sp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:background="@drawable/mainbtn"
+                            android:text="선택"
+                            android:fontFamily="@font/body"
+                            android:textColor="@color/black"
+                            android:layout_marginRight="10dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/linearLayout8"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:text="6,300원"
+            android:fontFamily="@font/body"
+            android:textColor="@color/white"
+            android:background="@drawable/paybtn"
+            android:gravity="center_vertical"/>
+
+        <Button
+            android:id="@+id/payBtn"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="결제 및 주문하기"
+            android:fontFamily="@font/body"
+            android:textSize="25sp"
+            android:textColor="#ff0000"
+            android:background="@drawable/paybtn"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!--// cakepagefragment 바디 제작. 후 페이지 이동 구현-->
+
+
+
+
+
+
+
+
+
+
+
