--- a/app/src/main/res/layout/startpagebody.xml
+++ b/app/src/main/res/layout/startpagebody.xml
@@ -277,12 +277,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:weightSum="10"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
             <Button
+                android:layout_marginTop="10dp"
                 android:id="@+id/accountBtn"
-                android:layout_width="300dp"
+                android:layout_width="0dp"
+                android:layout_weight="8"
                 android:layout_height="60dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/accountbtn"
