--- a/app/src/main/res/layout/categorybody.xml
+++ b/app/src/main/res/layout/categorybody.xml
@@ -63,11 +63,16 @@
                     </LinearLayout>
                 </HorizontalScrollView>
                 <LinearLayout
-                    android:id="@+id/mainlayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/beverageSpace"
+                        android:orientation="vertical">
 
+                    </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
